fixtures/error/renewAccessToken_noRenewalNeed.js
module.exports = {
    message: 'Token does not need renewal yet',
    token: 'gAAAAABfLkh1aYME...', // token existente
    date: '2024-11-18T00:00:00Z'
  };
  